--- a/bh-tsne-demo/pom.xml
+++ b/bh-tsne-demo/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.javagl</groupId>
         <artifactId>bh-tsne-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>bh-tsne-demo</artifactId>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>de.javagl</groupId>
             <artifactId>bh-tsne</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.javagl</groupId>
