--- a/bh-tsne/pom.xml
+++ b/bh-tsne/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.javagl</groupId>
         <artifactId>bh-tsne-parent</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>bh-tsne</artifactId>
