--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>de.javagl</groupId>
     <artifactId>bh-tsne-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <developers>
         <developer>
